feat(psico): permitir citas independientes
